--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
